Bugfixes and updates:
- Update sidebar account settings icon
- Update Select component to a custom element
- Fix narrow window seed input too wide

--- a/src/desktop/src/ui/components/list.scss
+++ b/src/desktop/src/ui/components/list.scss
@@ -3,7 +3,7 @@
     padding: 20px 0;
     margin: 0px 20px;
     height: 80px;
-    border-bottom: 2px solid var(--body-bg);
+    border-bottom: 1px solid var(--body-bg);
     > a {
         color: var(--body);
         margin: 0 22px 0 0;
